--- a/web.css
+++ b/web.css
@@ -1,7 +1,23 @@
 @charset "UTF-8";
+
+#page {
+    height: 2000px;
+    width: 990px;
+    position:absolute;
+    left:80px;
+    right:80px;
+    margin:0 auto;
+}
+
+#top {
+    text-align: center;
+    background-color: darkred;
+    color: aliceblue;
+}
+
 #photo {
     height:330px;
-    width: 220px;
+    width: 230px;
     float: left;
 }
 
@@ -25,4 +41,14 @@
     text-align: left;
     line-height: 30px;
     clear: left;
+}
+
+#education {
+    text-align: left;
+    line-height: 30px;
+}
+
+#interests {
+    text-align: left;
+    line-height: 30px;
 }
